--- a/src/index.css
+++ b/src/index.css
@@ -86,3 +86,130 @@ body {
   scrollbar-width: 10px;
   scrollbar-color: #999 #fff;
 }
+
+.containing-div {
+  position: relative;
+  /* max-width: 500px;
+  width: 100%;
+  background: #ffffff;
+  margin: 0 15px;
+  padding: 10px 20px;
+  border-radius: 7px; */
+}
+
+.title-text {
+  text-align: center;
+  background-color: crimson;
+  color: #fff;
+  font-weight: 400;
+  border-radius: 50px;
+  margin-top: 15px;
+  margin-bottom: 30px;
+}
+
+.containing-div .skill-box {
+  width: 100%;
+  margin: 25px 0px;
+}
+
+.skill-box .title {
+  display: block;
+  font-size: 18px;
+  font-weight: 600;
+  color: #333;
+}
+
+.skill-box .skill-bar {
+  height: 8px;
+  width: 100%;
+  border-radius: 6px;
+  margin-top: 6px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.skill-box .skill-per {
+  position: relative;
+  display: block;
+  height: 100%;
+  width: 95%;
+  border-radius: 6px;
+  background: #142eb5;
+  animation: progress 1s ease-in-out forwards;
+  opacity: 0;
+}
+
+.skill-per.react {
+  width: 85%;
+  animation-delay: 0.2s;
+}
+
+.skill-per.node {
+  width: 75%;
+  animation-delay: 0.2s;
+}
+
+.skill-per.native {
+  width: 80%;
+  animation-delay: 0.2s;
+}
+
+.skill-per.next {
+  width: 85%;
+  animation-delay: 0.2s;
+}
+
+.skill-per.javascript {
+  width: 80%;
+  animation-delay: 0.2s;
+}
+
+.skill-per.typescript {
+  width: 75%;
+  animation-delay: 0.2s;
+}
+
+.skill-per.express {
+  width: 70%;
+  animation-delay: 0.2s;
+}
+
+.skill-per.tailwindcss {
+  width: 90%;
+  animation-delay: 0.2s;
+}
+
+@keyframes progress {
+  0% {
+    width: 0;
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.skill-per .tooltip {
+  position: absolute;
+  right: -14px;
+  top: -34px;
+  font-size: 18px;
+  font-weight: 500;
+  color: #fb503b;
+  /* padding: 2px 6px; */
+  border-radius: 3px;
+  /* background: black; */
+  z-index: 1;
+}
+
+.tooltip::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -2px;
+  height: 10px;
+  width: 10px;
+  z-index: -1;
+  /* background-color: crimson; */
+  transform: translateX(-50%) rotate(45deg);
+}
