--- a/src/index.css
+++ b/src/index.css
@@ -150,7 +150,7 @@ body {
 
 .skill-per.native {
   width: 80%;
-  animation-delay: 0.2s;
+  /* animation-delay: 0s; */
 }
 
 .skill-per.next {
@@ -213,3 +213,27 @@ body {
   /* background-color: crimson; */
   transform: translateX(-50%) rotate(45deg);
 }
+
+.animatedDiv {
+  opacity: 0;
+  animation-name: fadeIn;
+  animation-timing-function: ease-in-out;
+  animation-duration: 0.7s;
+  animation-delay: 0.1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animatedDiv:focus {
+  animation: fadeIn 0.5s forwards;
+}
+
+
