--- a/src/index.css
+++ b/src/index.css
@@ -245,21 +245,6 @@ body {
   user-select: none;
 }
 
-.child {
-  /* position: absolute;
-  top: 50%;
-  left: 50%; */
-  /* transform: translateX(50%); */
-  /* Adjust width and height of the child div */
-  /* width: 200px;
-  height: 100px;
-  background-color: #ff0000 */
+.nav-item .active {
+  color: "#fb503b";
 }
-
-/* .parent {
-  position: relative;
-  width: 100%;
-  height: 100%; 
-  background-color: #f0f0f0;
-} */
-
